--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/speed-insights": "^1.0.2",
     "firebase": "^10.7.1",
     "flowbite": "^2.2.1",
     "mdb-react-ui-kit": "^7.0.0",
