--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.10.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
+    "xlsx-populate": "^1.21.0"
   },
   "scripts": {
     "start": "react-scripts start",
